[gd_scene load_steps=6 format=3 uid="uid://dgygtrrgeqtqv"]

[ext_resource type="PackedScene" uid="uid://c6drr5g8i81nn" path="res://player.tscn" id="1_3s780"]
[ext_resource type="Script" path="res://main.gd" id="1_resk3"]
[ext_resource type="PackedScene" uid="uid://dah5d3gke8tbl" path="res://mob.tscn" id="2_b48fc"]
[ext_resource type="PackedScene" uid="uid://deg0ntoafoy5j" path="res://hud.tscn" id="4_eafl4"]

[sub_resource type="Curve2D" id="Curve2D_k0see"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_resk3")
mob_scene = ExtResource("2_b48fc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.788235, 0.992157, 1)

[node name="Player" parent="." instance=ExtResource("1_3s780")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPatch" type="Path2D" parent="."]
curve = SubResource("Curve2D_k0see")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPatch"]

[node name="HUD" parent="." instance=ExtResource("4_eafl4")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
